@@ -36,15 +36,15 @@ public interface BinderFactory extends Component
   /** Lowest-priority for a BinderFactory.  Default infrastructure
    * BinderFactories are generally at this level.
    **/
-  public final static int MIN_PRIORITY = 1;
+  public final static int MIN_PRIORITY = 0;
   /** Typical intermediate priority for "real-world" BinderFactories.
    * Higher priorities should be used mainly for BinderFactoryWrappers.
    **/
-  public final static int NORM_PRIORITY = 5;
+  public final static int NORM_PRIORITY = 50;
   /** Highest priority, for use by very important specific
    * BinderFactoryWrappers.
    **/
-  public final static int MAX_PRIORITY = 10;
+  public final static int MAX_PRIORITY = 100;
 
   /** The priority of this binder factory.  The range of values
    * is specified by the MIN_PRIORITY to MAX_PRIORITY.
