@@ -19,36 +19,27 @@ import org.cougaar.core.component.*;
 public class DefaultPluginBinderFactory extends BinderFactorySupport
 {
 
-  /** Select the binder to use.
+  /** Select the binder to use - must be an extension of DefaultPluginBinder.
    **/
-  public Class getBinderClass(Object child) {
+  protected Class getBinderClass(Object child) {
     return DefaultPluginBinder.class;
   }
   
-  /** Bind the Child component.  <p>
-   * The child component will already have been instantiated and any
-   * parameter has been set.  Depending on the ComponentFactory (or other
-   * constructor/initializer methods) used, there may have been additional
-   * initialization performed. <p>
-   * Generally all this method does is construct a new instance of 
-   * bindingSite for use with the child component.
-   * Various implementations may do additional Binder initialization
-   * such as starting a thread, instructing the binder to provide additional
-   * services, etc.
-   *
-   * @return A Binder instance of class bindingSite which is binding 
-   * the child component or null.
+  /** Bind a plugin with a plugin binder.  Calls initialize 
+   * after constructing the binder.
    **/
-  public Binder bindChild(Class binderClass, Object child) {
-    PluginManagerForBinder pi = (PluginManagerForBinder) getParentComponent();
-    try {
-      Constructor constructor = binderClass.getConstructor(new Class[]{Object.class, Component.class});
-      Binder binder = (Binder) constructor.newInstance(new Object[] {pi, child});
-      ((DefaultPluginBinder)binder).initialize();
-      return binder;
-    } catch (Exception e) {
-      e.printStackTrace();
-      throw new RuntimeException(e.toString());
+  protected Binder bindChild(Class binderClass, Object child) {
+    Binder b = super.bindChild(binderClass, child);
+    if (b == null) {
+      return null;
+    } else {
+      if (b instanceof DefaultPluginBinder) {
+        ((DefaultPluginBinder)b).initialize();
+        return b;
+      } else {
+        System.err.println("Illegal binder class specified: "+binderClass);
+        return null;
+      }
     }
   }
 }
