@@ -1,3 +1,12 @@
+2001-07-20  Michael Thome  <mthome@bbn.com>
+
+	* ServiceFilter, ServiceFilterBinder
+	Start of an example wrapping binder.  Not yet ready for prime time.
+
+	* Binder, BinderFactory, ContainerAPI, etc
+	More minor cleanup for consistency, safety.  getChildServiceBroker()
+	is renamed getServiceBroker for consistency with other components.	
+
 2001-07-19  Beth DePass <bdepass@bbn.com>
 	* ClusterImpl
 	Hook in new services that were split out of ClusterImpl such as
